--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Calculadora de Frete</title>
+  <title>Maia Tansport - Onde o metro cúbico faz a diferença.</title>
 </head>
 
 <body>
